[project]
name = "sonarqube_analyzer"
version = "0.1.0"
description = "MCP server to fetch SonarQube metrics and email them."
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0", # Or the specific version you have
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.11.4", # Needed by pydantic-settings for .env
    "python-dotenv>=1.0.0",
]

[project.scripts]
sonarqube-analyzer = "sonarqube_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
