[project]
name = "fastmcp-sonarqube-metrics"
version = "0.0.1"
description = "An MCP server that interacts with SonarQube for metrics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.7",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.4",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-openai>=0.3.16",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.3",
    "mcp[cli]>=1.7.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]
